--- a/core/src/main/resources/plugin.yml
+++ b/core/src/main/resources/plugin.yml
@@ -5,6 +5,8 @@ api-version: 1.20
 authors: [ Auxilor ]
 website: willfp.com
 
+folia-supported: true
+
 # eco is written as a softdepend because otherwise the plugin
 # loader will complain about it not being installed.
 
